--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.firebaseui:firebase-ui-auth:0.6.0'
+    compile 'com.google.firebase:firebase-crash:9.6.1'
+
 
     testCompile 'junit:junit:4.12'
 }
